expressly logo vertical alignment fix

--- a/lightbox/css/lightbox-common.css
+++ b/lightbox/css/lightbox-common.css
@@ -160,7 +160,6 @@ div.xly.xly-popup a:hover {
 div.xly.xly-popup .expressly {
     font-weight: bold;
     font-style: italic;
-    vertical-align: middle
 }
 
 div.xly.xly-popup .expressly img {
